--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,33 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.archetypes</groupId>
-  <artifactId>gwt-archetypes</artifactId>
-  <version>1.250-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>gwt-basic</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.github.archetypes</groupId>
+	<artifactId>gwt-archetypes</artifactId>
+	<version>1.250-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<modules>
+		<module>gwt-basic</module>
+		<module>gwt-with-gae</module>
+	</modules>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Mark Angelo Diesta</name>
+			<email>markdiesta@gmail.com</email>
+		</developer>
+	</developers>
+	
+	<scm>
+		<connection>scm:git:git@github.com:madz/gwt-archetypes.git</connection>
+		<url>git@github.com:madz/gwt-archetypes.git</url>
+		<developerConnection>scm:git:git@github.com:madz/gwt-archetypes.git</developerConnection>
+	</scm>
 </project>
