in pom.xml in the resource GWT added ${package} instead of com.personal.project

--- a/gxt-basic/src/main/resources/archetype-resources/pom.xml
+++ b/gxt-basic/src/main/resources/archetype-resources/pom.xml
@@ -87,7 +87,7 @@
 					documentation at codehaus.org -->
 				<configuration>
 					<modules>
-						<module>com.personal.project.App</module>
+						<module>${package}.App</module>
 					</modules>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
 					<compileReport>true</compileReport>
